# mcp_server

./: .env.template  .gitignore  .gitmodules  CLAUDE.md  README.md
docs/: minio-integration-design.md  openwebui-mcp-adaptation-plan.md  pandoc-mcp-development-guide.md
docs/openwebui/: README.md
docs/plans/: 2026-01-15-mcp-resource-support-design.md  2026-01-26-openwebui-url-auth-integration.md  2026-01-26-openwebui-url-integration-simplified.md
mcp-file-system/: CLAUDE.md  Dockerfile  README.md  test_local.sh
mcp-file-system/filesystemserver/: server.go
mcp-file-system/filesystemserver/handler/: croc_receive.go  croc_send.go  croc_status.go  croc_test.go
mcp_convert_router/: .dockerignore  .env.template  Dockerfile  README.md  __init__.py  croc_receiver.py  file_detector.py  logging_utils.py  requirements.txt  routing.py  server.py  storage.py  url_downloader.py  validators.py  verify_mcp_deploy.py  zip_security.py
mcp_convert_router/engines/: __init__.py  excel_engine.py  legacy_office_engine.py  mineru_engine.py  pandoc_engine.py
open-webui-tools/: README.md  file_to_markdown.py  file_to_markdown_tool.py
pandoc-mcp/pandoc/: .dockerignore  .env.example  DEPLOYMENT.md  Dockerfile  TESTING.md  docker-compose.yml  pyproject.toml
pandoc-mcp/pandoc/src/mcp_pandoc/: __init__.py  cli.py  config.py  server.py  storage.py
pandoc-mcp/pandoc/tests/: test_advanced_features.py  test_resource_integration.py  test_resource_support.py
tests/: test_allowlist.py  test_content_disposition.py  test_tls_verify.py  test_url_headers.py
(+4 files in other folders)
