[project]
name = "mcp-pandoc"
version = "0.9.0"
description = "MCP server for Pandoc document conversion with support for multiple transport modes (stdio, SSE, streamable-http), base64 file upload, and security features."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.1",
    "pyyaml>=6.0.2",
    "pandoc>=2.4",
    "pypandoc>=1.14",
    "pandocfilters>=1.5.0",
    "panflute>=2.3.1",
    "python-dotenv>=1.0.0",
    "minio>=7.2.0",
    "starlette>=0.27.0",
    "uvicorn>=0.23.0",
]
[[project.authors]]
name = "Vivek Vellaiyappan Surulimuthu"
email = "vivekvellaiyappans@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "jsonschema>=4.25.1",
    "yamllint>=1.37.1",
    "pre-commit>=4.3.0",
]

[project.scripts]
mcp-pandoc = "mcp_pandoc.cli:main"
[tool.ruff]
line-length = 120
exclude = ["tests/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "D", "N", "S"]
ignore = []

[tool.yamllint]
config-file = ".yamllint.yaml"
